[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "roseus"
dynamic = ["version"]
description = "Colormap family with full range of lightness"
readme = "README.md"
license = "MIT"
license-files = { paths = ["LICENSE.txt", "roseus/viscm/LICENSE-viscm.txt"] }
requires-python = ">=3.6"
authors = [
    { name = "KEUM Myungchul" },
]
keywords = [
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
#dependencies = ["matplotlib"]

[project.optional-dependencies]
generate = ["colour-science", "matplotlib", "numpy", "colorspacious", "scipy"]

[project.urls]
Homepage = "https://github.com/dofuuz/roseus"
Source = "https://github.com/dofuuz/roseus"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

[tool.hatch]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "roseus/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["roseus", "tests/unit"]
